--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -135,8 +135,8 @@
                     </button>                        
                 </div>
                 <div class="div-barra-pesquisa">
-                    <form action="#" method="POST">
-                        <input class="barra-pesquisa" type="text" name="pesquisa-produto" placeholder="PESQUISE SEU PRODUTO">
+                    <form action="/produtosPorPesquisa" method="GET">
+                        <input class="barra-pesquisa" type="text" name="produtoPesquisado" placeholder="PESQUISE SEU PRODUTO">
                         <span class="material-icons-outlined icon-lupa">search</span>
                     </form>
                 </div>                    
