--- a/public/stylesheets/produto.css
+++ b/public/stylesheets/produto.css
@@ -98,6 +98,17 @@ main div div .home-produto {
     
 
 }
+
+.paginaproduto div div section .img-nome-valor-comprar .nome-valor-comprar .button-produto .linkCarrinho {
+
+    display: flex;
+    text-decoration: none;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
 .paginaproduto div div section {
     display: flex;
     flex-flow: column;
@@ -198,6 +209,15 @@ main div div .home-produto {
     cursor: pointer;
     margin-top: 5%;
 
+}
+
+.paginaproduto div div .mais-produtos .produto .button-produto .linkCarrinho {
+    display: flex;
+    text-decoration: none;
+    color: #fff;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
 
 
