--- a/views/partials/resumo-valores-carrinho.ejs
+++ b/views/partials/resumo-valores-carrinho.ejs
@@ -46,10 +46,16 @@
     <% } %>
 
     <% if(locals.paginaAtual && paginaAtual == 'checkoutConfirmacaoPedido'){ %> 
-        <a href="" class="btn-finalizar-pedido">
-            FINALIZAR COMPRA
-            <span class="material-icons-outlined">check_circle</span>
-        </a>
+        <form action="/checkout/checkout-gravar-pedido" method="POST">
+
+            <input type="hidden" name="gravarPedido" value="true">
+
+            <button type="submit" class="btn-finalizar-pedido">
+                FINALIZAR COMPRA
+                <span class="material-icons-outlined">check_circle</span>
+            </button>
+        </form>
+        
     <% } %>
 
     
