Criação da página central de atendimento.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -45,7 +45,7 @@
                     <h3>Dúvidas</h3>
                     <p>Para sanar suas dúvidas acesse nossa <strong>Central de Atendimento</strong> 
                     clicando no botão abaixo e envie sua mensagem.</p>                    
-                    <a href="#">CENTRAL DE ATENDIMENTO</a>
+                    <a href="/central-de-atendimento">CENTRAL DE ATENDIMENTO</a>
                     
                 </div>
                 <div class="div-institucional">
