--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
                         <% } %>
                             
                         <li>
-                            <a id="" href="#">
+                            <a href="/central-de-atendimento">
                                 <span class="material-icons-outlined">headset_mic</span>
                                 Central de Atendimento
                             </a>
@@ -94,7 +94,7 @@
                         <% }%>                        
 
                         <li>
-                            <a href="#"><span class="material-icons-outlined imgBtnMenuNav">headset_mic</span>Central de Atendimento</a>
+                            <a href="/central-de-atendimento"><span class="material-icons-outlined imgBtnMenuNav">headset_mic</span>Central de Atendimento</a>
                         </li>                                                   
                     </ul>
                 </div>
