Criação da página Meus Pedidos

--- a/views/meus-dados.ejs
+++ b/views/meus-dados.ejs
@@ -38,7 +38,7 @@
                     
                     <div class="div-info-usuario-principal">
                         <p class="titulo-meus-dados">
-                            <span class="material-icons">article</span> MEUS DADOS
+                            <span class="material-icons-outlined">folder_shared</span> MEUS DADOS
                         </p>                        
 
                         <% if(locals.dadosAtualizados) { %> 
