--- a/public/stylesheets/perfil-usuario.css
+++ b/public/stylesheets/perfil-usuario.css
@@ -95,7 +95,7 @@
     box-shadow: 3px 2px 10px 4px #888;
 }
 
-.btn-pag-perfil-ir-as-compras SPAN {
+.btn-pag-perfil-ir-as-compras span {
         margin-right: 10px;
         font-size: 2rem;
 }
